<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Safety</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="create_and_account">Create and account?</string>
    <string name="login">LOGIN</string>
    <string name="forgot_passward">Forgot Passward?</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SIGNUP</string>
    <string name="title_activity_layout_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">google_map_key_here</string>
    <string name="enable_power_button">Enable Power Button</string>
    <string name="Phone" />
    <string name="Email" />
    <string name="Version">Version 1.0</string>
    <string name="Safety">Safety</string>
    <string name="ourmissiontx1">Our project is related to the safety of any person.</string>
    <string name="ourmissiontx2">Our main motive is to protect each and every person, to the best of our capabilities.</string>
    <string name="ourmissiontx3">Our software as a live location and emergency message sharing features which can activate easily.</string>
    <string name="ourmissiontx4">We does not capture any person data until it is required.</string>
    <string name="ourmissiontx5">This project is in the initial phase and we are willing to update in future.</string>
    <string name="ourteammember">Our Team Member</string>
    <string name="ourmission">Our Mission</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="search">Search</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="title_activity_navi">MainActivity</string>
    <string name="title_home">Contact</string>
    <string name="title_dashboard">Location</string>
    <string name="title_notifications">Profile</string>
</resources>