<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="25dp"
    tools:context=".aboutus">

    <TextView
        android:id="@+id/safety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Safety"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="143dp"
        android:layout_height="144dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/de_logo"
        app:layout_constraintBottom_toTopOf="@+id/ourmission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safety"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ourmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/ourmission"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ourmissiontx1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ourmissiontx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/ourmissiontx1"
        android:textAlignment="center"
        android:textColor="#ECF0F1"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/ourmissiontx2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ourmission"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ourmissiontx2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/ourmissiontx2"
        android:textAlignment="center"
        android:textColor="#ECF0F1"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/ourmissiontx3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ourmissiontx1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ourmissiontx3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/ourmissiontx3"
        android:textAlignment="center"
        android:textColor="#ECF0F1"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/ourmissiontx4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ourmissiontx2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ourmissiontx4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/ourmissiontx4"
        android:textAlignment="center"
        android:textColor="#ECF0F1"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/ourmissiontx5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ourmissiontx3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ourmissiontx5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:gravity="center_horizontal"
        android:text="@string/ourmissiontx5"
        android:textAlignment="center"
        android:textColor="#ECF0F1"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/ourteammember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ourmissiontx4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/ourteammember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/ourteammember"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/member1"
        app:layout_constraintTop_toBottomOf="@+id/ourmissiontx5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/member1"
        android:layout_width="265.73dp"
        android:layout_height="331.482dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_avinash"
        app:layout_constraintBottom_toTopOf="@+id/member2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ourteammember"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/member2"
        android:layout_width="265.73dp"
        android:layout_height="331.482dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_mayank"
        app:layout_constraintBottom_toTopOf="@+id/member3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/member1"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/member3"
        android:layout_width="265.73dp"
        android:layout_height="331.482dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_vishwajeet"
        app:layout_constraintBottom_toTopOf="@+id/member4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/member2"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/member4"
        android:layout_width="265.73dp"
        android:layout_height="331.482dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_prem"
        app:layout_constraintBottom_toTopOf="@+id/member5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/member3"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/member5"
        android:layout_width="265.73dp"
        android:layout_height="331.482dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/ic_divyesh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/member4"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>