<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgotPassword">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="312dp"
        android:layout_height="518dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:textColorHint="#FFFFFF"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ForEmail"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ForParentPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/phone"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ForPhone"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:inputType="phone"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ForParentOTP"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/otp"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ForOTP"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ForParentPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            android:visibility="gone"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ForPassword"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ForParentConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/confirm_password"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            android:visibility="gone"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ForConfirmPassword"

                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ForSendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#2196F3"
                android:text="@string/send_otp"
                android:textColor="@color/black"

                />

            <Button
                android:id="@+id/ForReSendOTP"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/resend_otp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/forBack"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/login"
        android:textColor="#002537"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintVertical_bias="0.827" />

</androidx.constraintlayout.widget.ConstraintLayout>