<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="291dp"
        android:layout_height="322dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/signupLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signEmail"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="text"
                android:textColor="@color/white"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:background="@android:color/transparent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signPassword"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="Password"
                android:inputType="textPassword"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button

            android:id="@+id/logForgot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/forgot_passward"
            android:textColor="@color/white" />

        <Button

            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#2196F3"
            android:text="@string/login"
            android:textColor="@color/black"

            />

    </LinearLayout>

    <Button
        android:id="@+id/signupLogIn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/signup"
        android:textColor="#002537"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/alphatx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

