<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/name"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signName"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="text"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signEmail"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/phone"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signPhone"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="phone"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signPassword"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/confirm_password"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signConfirmPassword"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:backgroundTint="#2196F3"
            android:text="@string/signup"
            android:textColor="@color/black"

            />


    </LinearLayout>

    <Button
        android:id="@+id/signupLogIn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/login"
        android:textColor="#002537"
        android:textSize="30sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/singuptx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>